BUGFIX Disabling horizontal overflow on tree with long node names in cms_left.css
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/trunk@92714 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/cms_left.css
+++ b/css/cms_left.css
@@ -338,6 +338,7 @@ ul.tree span.a.Root span.c {
 
 #sitetree_ul {
 	overflow: auto;
+	overflow-x: hidden;
 }
 
 ul#sitetree.tree ul {
